Fix receiver repository query, H2Util tests